methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:5: error: not enough arguments for method faireV: (c: java.awt.Color)Unit.
Unspecified value parameter c.
        faireV()
              ^MethodsPicture:6: error: not enough arguments for method setCouleurBrosse: (x$1: java.awt.Color)Unit.
Unspecified value parameter x$1.
        setCouleurBrosse()
                        ^